--- a/_sources/py-initialization.ipynb
+++ b/_sources/py-initialization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "483c883a",
+   "id": "6580267d",
    "metadata": {},
    "source": [
     "# Initialization (Python interface)"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81915da6",
+   "id": "08eb9356",
    "metadata": {},
    "source": [
     "## Demo for usage of *tools/initHelper.py*\n",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f740957c",
+   "id": "59249a65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,16 +44,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aea9363f",
+   "id": "a6f1aa7d",
    "metadata": {},
    "source": [
-    "First let's define the setup and a name (with path) for our initConfigurationFiles. We're using 4 MPI processes for this example, but you can also run it with `mpi_num_processes = 1`. "
+    "First let's define the setup and a name (with path) for our initConfigurationFiles. We're using 2 MPI processes for this example, but you can also run it with `mpi_num_processes = 1`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "03aa54fe",
+   "execution_count": 5,
+   "id": "e95154ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,14 +62,14 @@
     "whole_Ly = 50\n",
     "whole_Lz = 50\n",
     "S = 0.53  # uniaxial order for all sites\n",
-    "mpi_num_processes = 4  # set to 1 for non-MPI run\n",
+    "mpi_num_processes = 2  # set to 1 for non-MPI run\n",
     "# file path, without \".txt\", for initialConfigurationFile(s)\n",
     "initfilename_prefix = \"../my_init_file\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "54229d24",
+   "id": "6d2cd926",
    "metadata": {},
    "source": [
     "Now we define functions for our director components, formatted as **strings** that will be evaluated as expressions by NumPy. This example creates a cholesteric helix, with pitch equal to the system's $z$-height and pitch axis along the $z$ direction."
@@ -77,8 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "828e172d",
+   "execution_count": 6,
+   "id": "bb162536",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc7b3f32",
+   "id": "74d0f062",
    "metadata": {},
    "source": [
     "The above example strings illustrate a few important points:\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c2fb0f6",
+   "id": "7646d979",
    "metadata": {},
    "source": [
     "The allowed coordinate variables are:\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ced00565",
+   "id": "3efb82ab",
    "metadata": {},
    "source": [
     "Now we call *initHelper.py*'s function `create_init_state` to generate the initialConfigurationFiles. If using MPI, you'll see that one file is created for each MPI rank."
@@ -129,8 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5944e5a1",
+   "execution_count": 7,
+   "id": "dcca48b6",
    "metadata": {},
    "outputs": [
     {
@@ -139,9 +139,7 @@
      "text": [
       "Configuration for process (0,0,0) has been saved to ../my_init_file_x0y0z0.txt.\n",
       "Configuration for process (1,0,0) has been saved to ../my_init_file_x1y0z0.txt.\n",
-      "Configuration for process (0,1,0) has been saved to ../my_init_file_x0y1z0.txt.\n",
-      "Configuration for process (1,1,0) has been saved to ../my_init_file_x1y1z0.txt.\n",
-      "['../my_init_file_x0y0z0.txt', '../my_init_file_x1y0z0.txt', '../my_init_file_x0y1z0.txt', '../my_init_file_x1y1z0.txt']\n"
+      "['../my_init_file_x0y0z0.txt', '../my_init_file_x1y0z0.txt']\n"
      ]
     }
    ],
@@ -160,16 +158,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ec87b2a",
+   "id": "b2057349",
    "metadata": {},
    "source": [
-    "Let's take a look at our initial configuration. Here we're using [open-ViewMin](https://open-viewmin.gitlab.io/), a visualization environment under development for use with open-Qmin. This project is publicly available at [https://gitlab.com/open-viewmin/open-viewmin.gitlab.io](https://gitlab.com/open-viewmin/open-viewmin.gitlab.io). Feedback and bug reports will be gratefully received there or at d.a.beller \\[at\\] jhu.edu."
+    "Let's take a look at our initial configuration. Here we're using [open-ViewMin](https://open-viewmin.gitlab.io/), a visualization environment under development for use with open-Qmin. This project is publicly available at [https://gitlab.com/open-viewmin/open-viewmin.gitlab.io](https://gitlab.com/open-viewmin/open-viewmin.gitlab.io). Feedback and bug reports will be gratefully received there or at d.a.beller \\[at\\] jhu.edu. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "bc20a299",
+   "execution_count": 5,
+   "id": "bc5c9a14",
    "metadata": {
     "tags": [
      "hide-cell"
@@ -177,68 +175,68 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "QStandardPaths: XDG_RUNTIME_DIR not set, defaulting to '/tmp/runtime-dbeller'\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['../my_init_file_x0y0z0.txt', '../my_init_file_x1y0z0.txt', '../my_init_file_x0y1z0.txt', '../my_init_file_x1y1z0.txt'] -> ../my_init_file.txt\n",
-      "Imported ../my_init_file.txt as frame # 0.\n",
-      "ValueError while updating actor 'boundaries': Empty meshes cannot be plotted. Input mesh has zero points.\n"
+      "['../my_init_file_x0y0z0.txt', '../my_init_file_x1y0z0.txt', '../my_init_file_x0y1z0.txt', '../my_init_file_x1y1z0.txt'] -> ../my_init_file.txt\n"
      ]
     }
    ],
    "source": [
+    "# NOTE: Running this cell requires using openViewMin's auto-generated Python environment \"openViewMin-env\" as the kernel for the Jupyter notebook.\n",
+    "\n",
     "path.append(\"../../openviewmin/\") # <-- replace with your path to openViewMin\n",
     "\n",
-    "import open_viewmin\n",
+    "import openViewMin\n",
     "\n",
     "# If you're running this Jupyter notebook locally, you can set `off_screen=False` for more interactivity.\n",
-    "nplot = open_viewmin.NematicPlot(initfilenames, off_screen=True) "
+    "nplot = openViewMin.NematicPlot(initfilenames, off_screen=True, window_size=(800, 800))\n",
+    "nplot_p3js = nplot.to_pythreejs()\n",
+    "nplot.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c2f28e32-fb05-4985-a456-6bd64b782d76",
-   "metadata": {},
+   "execution_count": 6,
+   "id": "40ff7462",
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"400\"\n",
-       "            height=\"400\"\n",
-       "            src=\"../../py-initialization-example.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1c2662d8da7d415e9870211952a14ecc",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f9fbce5aa10>"
+       "Renderer(camera=PerspectiveCamera(children=(DirectionalLight(color='#fefefe', intensity=3.2, position=(1191607…"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# display result in browser\n",
-    "\n",
-    "from IPython.display import IFrame\n",
-    "nplot.export_html(\"./py-initialization-example.html\")\n",
-    "IFrame('../../py-initialization-example.html', width=400, height=400)\n",
-    "# note: delete the \"../../\" in the line above if you run this yourself"
+    "display(nplot_p3js)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "viewmin",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "viewmin"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -250,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
