--- a/documentation/Overview.ipynb
+++ b/documentation/Overview.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3bececff",
    "metadata": {},
    "source": [
     "# open-Qmin\n",
@@ -10,6 +11,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bdafb124",
    "metadata": {},
    "source": [
     "## Overview \n",
@@ -27,6 +29,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1225a189",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -40,6 +43,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "804ac40d",
    "metadata": {},
    "source": [
     "## Citation\n",
@@ -51,6 +55,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7e7e2a7b-918e-4867-91d3-d8d6ee51eaf9",
+   "metadata": {},
+   "source": [
+    "## Other peer-reviewed papers using open-Qmin\n",
+    "\n",
+    "* C. Long, X. Tang, R. L. B. Selinger, and J. V. Selinger. \"Geometry and mechanics of disclination lines in 3D nematic liquid crystals.\" *Soft Matter* **17**: 2265 (2021). [DOI: 10.1039/D0SM01899F](https://doi.org/10.1039/D0SM01899F)\n",
+    "\n",
+    "* A. Modin, B. Ash, K. Ishimoto, R. L. Leheny, F. Serra, and H. Aharoni. \"Tunable three-dimensional architecture of nematic disclination lines.\" *Proceedings of the National Academy of Sciences* **120**: e2300833120 (2023). [DOI: 10.1073/pnas.2300833120](https://doi.org/10.1073/pnas.2300833120)\n",
+    "\n",
+    "* G. Park, Y.-S. Choi, S. J. Kwon, D. K. Yoon. \"Planar Spin Glass with Topologically Protected Mazes in the Liquid Crystal Targeting for Reconfigurable Micro Security Media.\" *Advanced Materials* **36**: 2303077 (2023). [DOI: 10.1002/adma.202303077](https://doi.org/10.1002/adma.202303077)\n",
+    "\n",
+    "* H. S. Yun,  Z. C. Meijs, G. Park,  Y. Fu, L. Isa, D. K. Yoon. \"Controlling liquid crystal boojum defects on fixed microparticle arrays via capillarity-assisted particles assembly.\" *Journal of Colloid and Interface Science* **645**: 115 (2023). [DOI: 10.1016/j.jcis.2023.04.100](https://doi.org/10.1016/j.jcis.2023.04.100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f26f6e7d",
    "metadata": {},
    "source": [
     "## Authors\n",
@@ -60,6 +81,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5a51f1bd",
    "metadata": {},
    "source": [
     "## Acknowledgements\n",
@@ -94,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
