--- a/documentation/py-run.ipynb
+++ b/documentation/py-run.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5ba88948",
    "metadata": {},
    "source": [
     "# Running open-Qmin (Python interface)"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1bb864b8",
    "metadata": {},
    "source": [
     "Using *tools/runHelper.py*, you can define command-line parameters through a Python dictionary `runHelper.params`. These, along with any default parameters you didn't change, are converted by `runHelper.get_runcmd()` into a command-line string that calls *build/openQmin.out*.\n",
@@ -25,14 +27,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "cef15eb2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mpirun -n 4 ../build/openQmin.out --initializationSwitch 0 --GPU -1 --phaseConstantA -0.172 --phaseConstantB -2.12 --phaseConstantC 1.73 --deltaT 0.0005 --fTarget 1e-12 --iterations 500 --randomSeed -1 --L1 4.64 --L2 4.64 --L3 4.64 --L4 4.64 --L6 4.64 --Lx 25 --Ly 25 --Lz 50 --initialConfigurationFile ../my_init_file --boundaryFile ../ceiling_and_wavy_floor.txt --saveFile ../data/my_example_run --linearSpacedSaving -1 --logSpacedSaving -1 --stride 1 --hFieldX 0 --hFieldY 0 --hFieldZ 0 --hFieldMu0 1 --hFieldChi 1 --hFieldDeltaChi 0.5 --eFieldX 0 --eFieldY 0 --eFieldZ 0 --eFieldEpsilon0 1 --eFieldEpsilon 1 --eFieldDeltaEpsilon 0.5\n"
+      "mpirun -n 4 ../build/openQmin.out --initializationSwitch 0 --GPU -1 --phaseConstantA -0.172 --phaseConstantB -2.12 --phaseConstantC 1.73 --deltaT 0.0005 --fTarget 1e-12 --iterations 500 --randomSeed -1 --L1 4.64 --L2 0.0 --L3 0.0 --L4 0.0 --L6 0.0 --Lx 25 --Ly 25 --Lz 50 --initialConfigurationFile ../my_init_file --boundaryFile ../ceiling_and_wavy_floor.txt --saveFile ../data/my_example_run --linearSpacedSaving -1 --logSpacedSaving -1 --stride 1 --hFieldX 0 --hFieldY 0 --hFieldZ 0 --hFieldMu0 1 --hFieldChi 1 --hFieldDeltaChi 0.5 --eFieldX 0 --eFieldY 0 --eFieldZ 0 --eFieldEpsilon0 1 --eFieldEpsilon 1 --eFieldDeltaEpsilon 0.5\n"
      ]
     }
    ],
@@ -63,6 +66,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "18d1114c",
    "metadata": {},
    "source": [
     "We can run open-Qmin with these options by any of the following routes:\n",
@@ -75,7 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "b9e6844e",
    "metadata": {
     "scrolled": true,
     "tags": [
@@ -84,54 +89,18 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "lattice divisions: {2, 2, 1}\n",
-      "loading state...\n",
-      "loading state...\n",
-      "loading state...\n",
-      "loading state...\n",
-      "reading file with 2objects\n",
-      "reading boudary type 0 with 5.300000 0.530000 and 26307 entries\n",
-      "reading file with 2objects\n",
-      "reading boudary type 0 with 5.300000 0.530000 and 26307 entries\n",
-      "reading file with 2objects\n",
-      "reading boudary type 0 with 5.300000 0.530000 and 26307 entries\n",
-      "reading file with 2objects\n",
-      "reading boudary type 0 with 5.300000 0.530000 and 26307 entries\n",
-      "object with 26307 sites created\n",
-      "there are now 1 boundary objects known to the configuration... last object had 6576 sites and 1895 surface sites \n",
-      "reading boudary type 1 with 5.300000 0.530000 and 2500 entries\n",
-      "object with 26307 sites created\n",
-      "object with 26307 sites created\n",
-      "there are now 1 boundary objects known to the configuration... last object had 6577 sites and 1898 surface sites \n",
-      "reading boudary type 1 with 5.300000 0.530000 and 2500 entries\n",
-      "there are now 1 boundary objects known to the configuration... last object had 6577 sites and 1898 surface sites \n",
-      "reading boudary type 1 with 5.300000 0.530000 and 2500 entries\n",
-      "object with 2500 sites created\n",
-      "there are now 2 boundary objects known to the configuration... last object had 625 sites and 726 surface sites \n",
-      "object with 2500 sites created\n",
-      "there are now 2 boundary objects known to the configuration... last object had 625 sites and 725 surface sites \n",
-      "object with 2500 sites created\n",
-      "there are now 2 boundary objects known to the configuration... last object had 625 sites and 725 surface sites \n",
-      "object with 26307 sites created\n",
-      "there are now 1 boundary objects known to the configuration... last object had 6577 sites and 1898 surface sites \n",
-      "reading boudary type 1 with 5.300000 0.530000 and 2500 entries\n",
-      "object with 2500 sites created\n",
-      "there are now 2 boundary objects known to the configuration... last object had 625 sites and 725 surface sites \n",
-      "fire finished: step 500 max force:3.91e-05 \tpower: 2.36\t alpha 0.99\t dt 0.045125 \tscaling 0.249 \n",
-      "fire finished: step 500 max force:3.91e-05 \tpower: 2.36\t alpha 0.99\t dt 0.045125 \tscaling 0.249 \n",
-      "fire finished: step 500 max force:3.91e-05 \tpower: 2.36\t alpha 0.99\t dt 0.045125 \tscaling 0.249 \n",
-      "fire finished: step 500 max force:3.91e-05 \tpower: 2.36\t alpha 0.99\t dt 0.045125 \tscaling 0.249 \n",
-      "-5236.937263 581.229330 69.360224 0.000000 0.000000\n",
-      "-5236.936485 581.264815 69.360692 0.000000 0.000000\n",
-      "-5237.066075 581.634041 74.221093 0.000000 0.000000\n",
-      "minimized to 3.91031e-05\t E=-0.190661\t\n",
-      "-5236.933788 581.235202 69.360335 0.000000 0.000000\n",
-      "minimized to 3.91031e-05\t E=-0.190661\t\n",
-      "minimized to 3.91031e-05\t E=-0.190661\t\n",
-      "minimized to 3.91031e-05\t E=-0.190661\t\n"
+      "--------------------------------------------------------------------------\n",
+      "prterun was unable to launch the specified application as it lacked\n",
+      "permissions to execute an executable:\n",
+      "\n",
+      "   Executable: ../build/openQmin.out\n",
+      "   Node: Daniels-MacBook-Pro-5\n",
+      "\n",
+      "while attempting to start process rank 0.\n",
+      "--------------------------------------------------------------------------\n"
      ]
     }
    ],
@@ -141,59 +110,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "54a1e2e1",
    "metadata": {},
    "source": [
-    "Let's take a look at the result. Here we're using [openViewMin](https://gitlab.com/d.a.beller/openviewmin), a visualization environment under development for use with open-Qmin. This project is not yet publicly available, so if you want to help test it out, please contact Daniel Beller at d.a.beller \\[at\\] jhu.edu."
+    "Let's take a look at the result. Here we're using [open-ViewMin](https://open-viewmin.gitlab.io/), a visualization environment under development for use with open-Qmin. This project is publicly available at [https://gitlab.com/open-viewmin/open-viewmin.gitlab.io](https://gitlab.com/open-viewmin/open-viewmin.gitlab.io). Feedback and bug reports will be gratefully received there or at d.a.beller \\[at\\] jhu.edu."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
+   "id": "4844c730",
    "metadata": {
     "tags": [
      "hide-cell"
     ]
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "QStandardPaths: XDG_RUNTIME_DIR not set, defaulting to '/tmp/runtime-dbeller'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['../data/my_example_run_x0y1z0.txt', '../data/my_example_run_x1y0z0.txt', '../data/my_example_run_x1y1z0.txt', '../data/my_example_run_x0y0z0.txt'] -> ../data/my_example_run.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# NOTE: Running this cell requires using openViewMin's auto-generated Python environment \"openViewMin-env\" as the kernel for the Jupyter notebook.\n",
-    "\n",
     "path.append(\"../../openviewmin/\") # <-- replace with your path to openViewMin\n",
     "\n",
-    "import openViewMin\n",
+    "import open_viewmin\n",
     "import glob\n",
     "\n",
     "# collect all files from this run\n",
     "savedFiles = glob.glob(\"../data/my_example_run*\") \n",
     "# generate plot off-screen\n",
-    "nplot = openViewMin.NematicPlot(savedFiles, off_screen=True, window_size=(800, 800))\n",
+    "nplot = open_viewmin.NematicPlot(savedFiles, off_screen=True)\n",
     "# rotate plane of director glyphs to y-normal\n",
     "nplot.update_filter(\"director_plane\", {\"normal\":[0,1,0]}, update_self_actor=True)\n",
     "# reduce lighting intensity a bit\n",
     "nplot.set_lights_intensity(0.6)\n",
     "# display in notebook\n",
-    "nplot_p3js = nplot.to_pythreejs()\n",
-    "nplot.close()"
+    "nplot.export_html(\"py-run-example.html\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "id": "e3776f27",
    "metadata": {
     "tags": [
      "hide-input"
@@ -202,29 +156,47 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3f4f91e9bf64ba9bd79be2659b55ba6",
-       "version_major": 2,
-       "version_minor": 0
-      },
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"400\"\n",
+       "            height=\"400\"\n",
+       "            src=\"./py-run-example.html?background=gray\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
       "text/plain": [
-       "Renderer(camera=PerspectiveCamera(children=(DirectionalLight(color='#fefefe', intensity=0.6, matrixWorldNeedsU…"
+       "<IPython.lib.display.IFrame at 0x3204311d0>"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "display(nplot_p3js)"
+    "from IPython.display import IFrame\n",
+    "IFrame('./py-run-example.html', width=400, height=400, background=\"gray\")\n",
+    "# note: delete the \"../../\" in the line above if you run this yourself"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0dff4ce-27cd-4458-9b60-d4667dd6b7bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "openViewMin-env",
+   "display_name": "viewmin",
    "language": "python",
-   "name": "openviewmin-env"
+   "name": "viewmin"
   },
   "language_info": {
    "codemirror_mode": {
@@ -236,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
